# 2022-exp-data-analysis

./: .gitignore  CMakeLists.txt  README.md
src/01/: main.c  prototype.h  statisticalFunctions.c
src/02/: linearApproximation.c  linearApproximation.h  main.c  statisticalFunctions.c
src/03/: main.c  quadraticApproximation.c  quadraticApproximation.h
src/04/: generalCoefficientOfDetermination.c  generalCoefficientOfDetermination.h  linearFunction.c  linearFunction.h  main.c  mathematicalFunctionIF.h
src/common/: readFile.c  readFile.h
src/common/macro/: myErrors.h  printFormat.h
src/common/statics/: staticalFunctions.c  staticalFunctions.h
src/common/type/: linearDouble.c  linearDouble.h  linearFunction.h  linearFunctionParameters.h  quadraticFunction.h  quadraticFunctionParameters.h  regressionCoefficient.h
src/common/utils/: readFile.c  readFile.h
